--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,6 @@
     "name": "magenxcommerce/module-url-rewrite-graph-ql",
     "description": "N/A",
     "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
-    "version": "100.4.0",
     "require": {
         "php": "~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
@@ -15,6 +10,10 @@
     "suggest": {
         "magento/module-graph-ql": "100.4.*"
     },
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -22,5 +21,6 @@
         "psr-4": {
             "Magento\\UrlRewriteGraphQl\\": ""
         }
-    }
+    },
+    "version": "100.4.0"
 }
